--- a/Formulas/Formulas.vcxproj
+++ b/Formulas/Formulas.vcxproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CodeAnalyzer.h" />
+    <ClInclude Include="Errors.h" />
     <ClInclude Include="IOperator.h" />
     <ClInclude Include="Token.h" />
     <ClInclude Include="IElement.h" />
@@ -100,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CodeAnalyzer.cpp" />
+    <ClCompile Include="Errors.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Operand.cpp" />
     <ClCompile Include="BinarOperators.cpp" />
