--- a/Formulas/Formulas.vcxproj
+++ b/Formulas/Formulas.vcxproj
@@ -88,9 +88,11 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CodeAnalyzer.h" />
     <ClInclude Include="LexicalAnalyzer.h" />
     <ClInclude Include="Errors.h" />
     <ClInclude Include="IOperator.h" />
+    <ClInclude Include="SyntacticalAnalyzer.h" />
     <ClInclude Include="Token.h" />
     <ClInclude Include="IElement.h" />
     <ClInclude Include="Operand.h" />
@@ -100,6 +102,7 @@
     <ClInclude Include="UnarOperations.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CodeAnalyzer.cpp" />
     <ClCompile Include="LexicalAnalyzer.cpp" />
     <ClCompile Include="Errors.cpp" />
     <ClCompile Include="main.cpp" />
@@ -109,6 +112,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SyntacticalAnalyzer.cpp" />
     <ClCompile Include="UnarOperations.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
