--- a/Formulas/Formulas.vcxproj
+++ b/Formulas/Formulas.vcxproj
@@ -92,14 +92,16 @@
     <ClInclude Include="LexicalAnalyzer.h" />
     <ClInclude Include="Errors.h" />
     <ClInclude Include="IOperator.h" />
+    <ClInclude Include="OperatorsList.h" />
     <ClInclude Include="SyntacticalAnalyzer.h" />
     <ClInclude Include="Token.h" />
     <ClInclude Include="IElement.h" />
     <ClInclude Include="Operand.h" />
-    <ClInclude Include="BinarOperators.h" />
+    <ClInclude Include="OperatorsBinar.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="UnarOperations.h" />
+    <ClInclude Include="Tree.h" />
+    <ClInclude Include="OperatorsUnar.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CodeAnalyzer.cpp" />
@@ -107,13 +109,15 @@
     <ClCompile Include="Errors.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Operand.cpp" />
-    <ClCompile Include="BinarOperators.cpp" />
+    <ClCompile Include="OperatorsBinar.cpp" />
+    <ClCompile Include="OperatorsList.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="SyntacticalAnalyzer.cpp" />
-    <ClCompile Include="UnarOperations.cpp" />
+    <ClCompile Include="Tree.cpp" />
+    <ClCompile Include="OperatorsUnar.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
